--- a/src/components/Posts/Posts.css
+++ b/src/components/Posts/Posts.css
@@ -4,8 +4,8 @@
 	/* display: flex; */
 	justify-content: center;
 	align-items: center;
-	padding-left: 3rem;
-	padding-right: 3rem;
+	padding-top: 3rem;
+	padding-bottom: 3rem;
 }
 .image {
 	padding-left: 3rem;
